# ProjectMInd

./: .gitignore  README.md
backend/: .env.development  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/routes/: health.py
backend/app/application/: __init__.py
backend/app/application/services/: base_service.py
backend/app/core/: config.py  constants.py  logging.py
backend/app/dependencies/: get_service_registry.py  service_registry.py
backend/app/domain/: __init__.py
backend/app/domain/interfaces/: base.py  event_bus.py  repository.py
backend/app/domain/models/: __init__.py  domain_event.py  paper.py
backend/app/infrastructure/: __init__.py  event_bus.py
backend/app/infrastructure/persistence/: chromadb_client.py  database.py  neo4j_client.py
backend/app/infrastructure/storage/: __init__.py  exceptions.py  local_file_storage_service.py
backend/app/middleware/: error_handler.py  logging_middleware.py
backend/app/shared/: exceptions.py  schemas.py
backend/tests/: conftest.py
backend/tests/unit/: test_health.py  test_local_file_storage_service.py
